force-app/main/default/objects/Flujo_Doc_tmp__c/Flujo_Doc_tmp__c.object-meta.xml
<CustomObject>
    <label>Flujo Doc tmp</label>
    <nameField>
        <label>Flujo Doc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flujo Doc tmps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>