force-app/main/default/objects/Flujo_Doc_tmp__c/fields/KeyNfe__c.field-meta.xml
<CustomField>
    <fullName>KeyNfe__c</fullName>
    <label>KeyNfe</label>
    <length>40</length>
    <type>Text</type>
</CustomField>