force-app/main/default/objects/Flujo_Doc_tmp__c/fields/NUMERO_LOTE__c.field-meta.xml
<CustomField>
    <fullName>NUMERO_LOTE__c</fullName>
    <label>NUMERO LOTE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>