force-app/main/default/objects/Flujo_Doc_tmp__c/fields/Posnr__c.field-meta.xml
<CustomField>
    <fullName>Posnr__c</fullName>
    <label>Posnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>