force-app/main/default/objects/Flujo_Doc_tmp__c/fields/Vbeln__c.field-meta.xml
<CustomField>
    <fullName>Vbeln__c</fullName>
    <label>Vbeln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>